# BiQu-SPI-Test

./: CMakeLists.txt  data.csv
lcm-types/cpp/: spi_command_t.hpp  spi_data_t.hpp
motorApp/: CMakeLists.txt  main.cpp
rt/: CMakeLists.txt
rt/include/: rt_spi.h
rt/src/: rt_spi.cpp
